# seleniumUser

./: README.md  pyproject.toml
src/seleniumUser/: seleniumUser.py
src/seleniumuser/: __init__.py  seleniumuser.py
