[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
hatch.metadata.allow-direct-references = true

[project]
name = "seleniumUser"
version = "0.0.6"
requires-python = ">=3.10"
dependencies = ["selenium >= 4.2.0",
                "loopTimer @ git+https://github.com/matt-manes/loopTimer",
                "whosYourAgent @ git+https://github.com/matt-manes/whosYourAgent",
                "bs4",
                "audioToText @ git+https://github.com/matt-manes/audioToText"]